# fastbook

./: pyproject.toml
clean/: 04_mnist_basics.ipynb
