[tool.poetry]
name = "fastbook"
version = "0.1.0"
description = ""
authors = ["Julien Lhermitte <julien@useriver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "^2.3.0"
graphviz = "^0.16"
ipywidgets = "^7.6.3"
nbdev = "^1.1.14"
pandas = "^1.2.4"
scikit-learn = "^0.24.1"
azure-cognitiveservices-search-imagesearch = "^2.0.0"
sentencepiece = "^0.1.95"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
